--- a/src/app/features/user/list-fields/fields-detail/feilds-shedule/feilds-shedule.component.html
+++ b/src/app/features/user/list-fields/fields-detail/feilds-shedule/feilds-shedule.component.html
@@ -1,18 +1,22 @@
 <div>
-    <div class="mb-4 flex flex-wrap gap-2">
-      <div class="flex items-center">
-        <div class="w-4 h-4 bg-green-100 mr-1"></div>
-        <span>Trống</span>
-      </div>
-      <div class="flex items-center">
-        <div class="w-4 h-4 bg-blue-100 mr-1"></div>
-        <span>Hết chỗ</span>
-      </div>
-      <div class="flex items-center">
-        <div class="w-4 h-4 bg-gray-100 mr-1"></div>
-        <span>Đã đóng</span>
-      </div>
+  <div class="mb-4 flex flex-wrap gap-2">
+    <div class="flex items-center">
+      <div class="w-4 h-4 bg-green-100 mr-1"></div>
+      <span>Trống</span>
     </div>
+    <div class="flex items-center">
+      <div class="w-4 h-4 bg-blue-100 mr-1"></div>
+      <span>Hết chỗ</span>
+    </div>
+    <div class="flex items-center">
+      <div class="w-4 h-4 bg-gray-100 mr-1"></div>
+      <span>Đã đóng</span>
+    </div>
+    <div *ngIf="isLoggedIn()" class="flex items-center">
+      <div class="w-4 h-4 bg-yellow-100 mr-1"></div>
+      <span>Đã đặt</span>
+    </div>
+  </div>
     
     <!-- Điều hướng tuần -->
     <div class="flex justify-between items-center mb-4">
@@ -71,6 +75,6 @@
 </div>
   
 <app-modal-book [isVisibleBook]="isVisibleBook" [slot]="slot" [detailInfo]="detailInfo" (changeVisibleBook)="handleChangeVisibleBook($event)"></app-modal-book>
-<app-modal-detail [isVisibleDetail]="isVisibleDetail" (changeVisibleDetail)="handleChangeVisibleDetail($event)"></app-modal-detail>
+<app-modal-detail [isVisibleDetail]="isVisibleDetail" [slot]="slot" [detailInfo]="detailInfo" (changeVisibleDetail)="handleChangeVisibleDetail($event)"></app-modal-detail>
 <app-modal-close [isVisibleClosed]="isVisibleClosed" [slot]="slot" [detailInfo]="detailInfo" (changeVisibleClosed)="handleChangeVisibleClosed($event)"></app-modal-close>
 <app-popup-need-login [isVisible]="isVisible" (changeVisibleDelete)="handleChangeVisible($event)"></app-popup-need-login>
