--- a/src/app/layouts/main/main.component.html
+++ b/src/app/layouts/main/main.component.html
@@ -89,7 +89,8 @@
                 <div [routerLink]="['/home-page']" class="text-primary italic text-[18px] hover:underline cursor-pointer">Trang chủ</div>
                 <div [routerLink]="['/list-feilds']" class="text-primary italic text-[18px] hover:underline cursor-pointer">Danh sách sân</div>
                 <div [routerLink]="['/concert']" class="text-primary italic text-[18px] hover:underline cursor-pointer">Sự kiện</div>
-                <div class="text-primary italic text-[18px] hover:underline cursor-pointer">Liên hệ</div>
+                <div *ngIf="this.role" class="text-primary italic text-[18px] hover:underline cursor-pointer">Lịch sử đặt sân</div>
+                <div [routerLink]="['/contact']" class="text-primary italic text-[18px] hover:underline cursor-pointer">Liên hệ</div>
             </div>
             <div *ngIf="!this.role" class="flex items-center justify-between gap-[20px]">
                 <div class="bg-[#4FC460] text-white text-center text-[16px] py-[8px] w-[100px] rounded-[8px] cursor-pointer italic shadow-shadow-btn"
