--- a/src/app/features/owner/concert-by-owner/concert-by-owner-add/concert-by-owner-add.component.html
+++ b/src/app/features/owner/concert-by-owner/concert-by-owner-add/concert-by-owner-add.component.html
@@ -5,7 +5,7 @@
         <div *ngIf="!isEdit" class="text-primary">Tạo sự kiện</div>
         <div *ngIf="isEdit" class="text-primary">Cập nhật sự kiện</div>
     </div>
-    <div class="flex-1 pt-8 px-[50px] rounded-lg overflow-y-auto">
+    <div class="flex-1 pt-8 rounded-lg overflow-y-auto">
         <form class="flex flex-col gap-2 mt-4 p-[1px] " [formGroup]="form">
             <div *ngIf="imagePreview" class="w-full flex flex-col items-center gap-1 justify-center mb-2">
                 <img [src]="imagePreview" alt="Preview" class="max-w-[300px] max-h-[200px] object-cover border rounded">
