change api facility

--- a/src/app/features/owner/facility/add-facility/add-facility.component.html
+++ b/src/app/features/owner/facility/add-facility/add-facility.component.html
@@ -51,7 +51,7 @@
                         </mat-error>
                     </mat-form-field>
                 </div>
-                <div class="flex flex-col flex-1">
+                <!-- <div class="flex flex-col flex-1">
                     <span class="mb-1">Giá</span>
                     <mat-form-field class="custom-input " appearance="outline">
                         <input matInput placeholder="Nhập giá tiền" formControlName="price" />
@@ -61,7 +61,7 @@
                             Vui lòng nhập đầy đủ thông tin!
                         </mat-error>
                     </mat-form-field>
-                </div>
+                </div> -->
             </div>
             <div class="flex w-full gap-9">
                 <div class="flex flex-col flex-1">
