--- a/src/app/features/owner/facility/list-facility/list-facility.component.html
+++ b/src/app/features/owner/facility/list-facility/list-facility.component.html
@@ -45,7 +45,7 @@
                 <div class="text-left">{{item?.name}}</div>
               </td>
               <td >
-                <div class="flex justify-center"><img class="object-cover w-[100px] h-[60px]" [src]="item.image"/></div>
+                <div class="flex justify-center"><img class="object-cover w-[100px] h-[60px]" [src]="item.imageUrl"/></div>
               </td>
               <td> 
                 <div class="text-left">{{item?.address}}</div>
