--- a/src/app/features/user/list-fields/fields-detail/fields-detail.component.html
+++ b/src/app/features/user/list-fields/fields-detail/fields-detail.component.html
@@ -8,7 +8,7 @@
     </div>
     <div *ngIf="!isShedule" class="w-full flex items-start px-5 mt-7 gap-5">
         <div class="w-[50%] flex flex-col gap-5">
-            <img class="object-cover w-full h-[400px]" [src]="selectedField.image"/>
+            <img class="object-cover w-full h-[400px]" [src]="selectedField.imageUrl"/>
         </div>
         <div class="w-[50%] flex flex-col items-start justify-start gap-3">
             <div class="text-[28px] font-semibold">{{selectedField.name}}</div>
@@ -26,7 +26,7 @@
     </div>
     <div *ngIf="isShedule" class="flex items-start gap-5 mt-7">
         <div class="w-[25%] flex flex-col items-center">
-            <img class="object-cover w-full h-[200px]" [src]="selectedField.image"/>
+            <img class="object-cover w-full h-[200px]" [src]="selectedField.imageUrl"/>
             <div class="w-full flex flex-col items-start justify-start gap-3 mt-5">
                 <div class="text-[22px] font-semibold">{{selectedField.name}}</div>
                 <div class="text-[14px] leading-[120%] font-semibold">Địa chỉ: 
