--- a/src/assets/styles/antdesign.scss
+++ b/src/assets/styles/antdesign.scss
@@ -86,3 +86,8 @@ span.ant-progress-text.ng-star-inserted {
   line-height: 100% !important;
   margin-top: 8px !important;
 }
+
+.ant-modal-header {
+  border-top-left-radius: 20px !important;
+  border-top-right-radius: 20px !important;
+}
