--- a/src/app/features/owner/schedule-owner/schedule-owner-book/schedule-owner-book.component.html
+++ b/src/app/features/owner/schedule-owner/schedule-owner-book/schedule-owner-book.component.html
@@ -8,7 +8,7 @@
     </div>
     <div class="flex items-start gap-5 mt-7">
         <div class="w-[25%] flex flex-col items-center">
-            <img class="object-cover w-full h-[200px]" [src]="selectedField.image"/>
+            <img class="object-cover w-full h-[200px]" [src]="selectedField.imageUrl"/>
             <div class="w-full flex flex-col items-start justify-start gap-3 mt-5">
                 <div class="text-[22px] font-semibold">{{selectedField.name}}</div>
                 <div class="text-[14px] leading-[120%] font-semibold">Địa chỉ: 
