--- a/src/app/features/user/concert/concert-list/concert-list.component.html
+++ b/src/app/features/user/concert/concert-list/concert-list.component.html
@@ -45,7 +45,7 @@
             </div>
             <div *ngIf="!isLoading && listEvents.length > 0" class="flex flex-col w-full items-start gap-4 mt-8 list-events">
                 <div *ngFor="let item of listEvents" class="flex flex-col w-full items-start p-2 shadow-shadow-timeword border bg-[#fcfbfb]">
-                    <div class="w-full text-[16px] font-semibold text-start mt-2">{{item?.name}}</div>
+                    <div class="w-full text-[16px] font-semibold text-start mt-2">{{item?.title}}</div>
                     <div class="w-full text-[15px] font-normal text-start mt-[2px]">Từ: <span class="italic font-medium">{{item?.startDate | date:'HH:mm dd/MM/yyyy'}}</span> 
                         đến <span class="italic font-medium">{{item?.endDate | date:'HH:mm dd/MM/yyyy'}}</span></div>
                     <div class="w-full text-[15px] font-normal text-start mt-[2px]">
@@ -53,7 +53,7 @@
                     </div>
                     <div class="w-full flex justify-start items-start gap-5 mt-[10px]">
                         <div class="w-[260px] h-[180px]">
-                            <img class="object-cover w-full h-full" [src]="item.image"/>
+                            <img class="object-cover w-full h-full" [src]="item.imageUrl"/>
                         </div>
                         <div class="flex-1 flex flex-col h-full justify-start items-start gap-5">
                             <div *ngIf="item.description.length > 400" class="text-start text-[14px] font-normal">{{ item.description.substring(0, 400) + '...'}}</div>
