--- a/src/app/features/home-page/home-page.component.html
+++ b/src/app/features/home-page/home-page.component.html
@@ -65,7 +65,7 @@
             <div #scroller class="media-scroller snaps-inline bg-white overflow-x-auto whitespace-nowrap flex">
                 <div *ngFor="let item of listSanBong" class="flex-shrink-0 w-[300px] shadow-shadow-timeword mx-2 rounded-md">
                     <div class="w-[300px] h-[200px]">
-                        <img class="object-cover w-full h-full rounded-tl-md rounded-tr-md" [src]="item.image"/>
+                        <img class="object-cover w-full h-full rounded-tl-md rounded-tr-md" [src]="item.imageUrl"/>
                     </div>
                     <div class="flex flex-col p-4">
                         <div class="text-[#000] text-[18px] font-semibold">{{ item.name }}</div>
