feat: manage price facility

--- a/src/app/features/owner/concert-by-owner/concert-by-owner-list/concert-by-owner-list.component.html
+++ b/src/app/features/owner/concert-by-owner/concert-by-owner-list/concert-by-owner-list.component.html
@@ -46,7 +46,7 @@
                 {{item?.name}}
               </td>
               <td >
-                <div class="flex justify-center"><img class="object-cover w-[100px] h-[60px]" [src]="item.image"/></div>
+                <div class="flex justify-center"><img class="object-cover w-[100px] h-[60px]" [src]="item.imageUrl"/></div>
               </td>
               <td >
                 {{item?.startDate | date:'HH:mm dd/MM/yyyy'}}
