--- a/src/app/features/owner/price-manager/add-price/add-price.component.html
+++ b/src/app/features/owner/price-manager/add-price/add-price.component.html
@@ -11,13 +11,13 @@
                 <div class=" flex flex-col flex-1">
                     <span class="mb-[6px]">Chọn sân</span>
                     <mat-form-field class="custom-input " appearance="outline">
-                        <mat-select placeholder="Chọn sân của bạn" formControlName="name">
-                            <mat-option *ngFor="let item of listFacility" [value]="item.value">
-                              {{ item.label }}
+                        <mat-select placeholder="Chọn sân của bạn" formControlName="facility">
+                            <mat-option *ngFor="let item of listFacility" [value]="item.id">
+                              {{ item.name }}
                             </mat-option>
                         </mat-select>
                         <mat-error
-                            *ngIf="form.get('name')?.errors?.['required']&& (form.get('name')?.dirty || form.get('name')?.touched)"
+                            *ngIf="form.get('facility')?.errors?.['required']&& (form.get('facility')?.dirty || form.get('facility')?.touched)"
                             class="text-red-600">
                             Vui lòng nhập đầy đủ thông tin
                         </mat-error>
@@ -94,14 +94,28 @@
                     </mat-form-field>
                 </div>
                 <div class="flex flex-col flex-1">
-                    <span class="mb-[6px]">Giá cọc (30% giá tiền gốc)</span>
+                    <span class="mb-[6px]">Hệ số</span>
                     <mat-form-field class="custom-input " appearance="outline">
-                        <input matInput placeholder="Nhập giá tiền cọc" formControlName="deposit" />
+                        <input matInput placeholder="Nhập hệ số" formControlName="coefficient" />
                         <mat-error
-                            *ngIf="form.get('deposit')?.errors?.['required']&& (form.get('deposit')?.dirty || form.get('deposit')?.touched)"
+                            *ngIf="form.get('coefficient')?.errors?.['required']&& (form.get('coefficient')?.dirty || form.get('coefficient')?.touched)"
                             class="text-red-600">
                             Vui lòng nhập đầy đủ thông tin!
                         </mat-error>
+                    </mat-form-field>
+                </div>
+            </div>
+            <div class="flex w-full gap-9">
+                <div class="flex flex-col flex-1">
+                    <span class="mb-[6px]">Giá tiền cuối (Giá gốc * hệ số)</span>
+                    <mat-form-field class="custom-input " appearance="outline">
+                        <input matInput formControlName="lastPrice" readonly />
+                    </mat-form-field>
+                </div>
+                <div class="flex flex-col flex-1">
+                    <span class="mb-[6px]">Giá cọc (30% giá tiền cuối)</span>
+                    <mat-form-field class="custom-input " appearance="outline">
+                        <input matInput formControlName="deposit" readonly />
                     </mat-form-field>
                 </div>
             </div>
